--- a/index.html
+++ b/index.html
@@ -90,168 +90,214 @@
   </div>
 </section>
 
-<!-- PROBLEM -->
-<div class="section-divider">The problem</div>
+<!-- HOW IT WORKS -->
+<div class="section-divider">How it works</div>
 
 <section class="section">
-  <p class="section-label">Why this exists</p>
-  <h2 class="section-title">Creative networking<br/>is <em>broken</em></h2>
+  <p class="section-label">The Platform</p>
+  <h2 class="section-title">Built for how creatives<br/><em>actually</em> network</h2>
   <p class="section-body">
-    You're paying for platforms that don't work and attending events that lead nowhere. You need a community of the right people, at the right level, who actually get what you're going through.
+    Events are where real connections happen. The platform keeps them alive.
   </p>
 
-  <div class="pain-grid">
-    <div class="pain-card">
-      <div class="pain-icon">🔍</div>
-      <h3>Finding the right people feels impossible</h3>
-      <p>You're surrounded by creatives, but finding senior professionals at your level — people who understand your challenges and can open real doors — is like searching for a needle in a haystack.</p>
+  <div class="features-showcase">
+    <div class="feature-card">
+      <div class="feature-icon-large">🎪</div>
+      <h3>Curated Events</h3>
+      <p>Weekly portfolio reviews, project discussions, and networking mixers in Berlin. Every event is quality-controlled, focused, and designed for senior creative professionals.</p>
+      <div class="feature-benefit">
+        <span class="benefit-label">You get:</span> Access to the right people at the right events
+      </div>
     </div>
-    <div class="pain-card">
-      <div class="pain-icon">🍂</div>
-      <h3>Connections fade after events</h3>
-      <p>You meet promising people, exchange details, feel the spark... and then nothing. Without a way to stay connected, the momentum dies and the relationship never becomes anything real.</p>
-    </div>
-    <div class="pain-card">
-      <div class="pain-icon">💸</div>
-      <h3>Paying for platforms that don't deliver</h3>
-      <p>You're subscribed to multiple networking platforms hoping one will work. None understand what creative professionals actually need. It's exhausting, expensive, and frustrating.</p>
-    </div>
-  </div>
-</section>
 
-<!-- HOW IT WORKS -->
-<section class="how-section">
-  <div class="how-inner">
-    <p class="section-label">How it works</p>
-    <h2 class="section-title">Events are the <em>anchor</em>.<br/>The platform keeps you connected.</h2>
-    <div class="steps-grid">
-      <div class="step">
-        <div class="step-num">01</div>
-        <div class="step-icon">🎯</div>
-        <h3>Attend a curated event</h3>
-        <p>Weekly events designed for senior creative professionals. Portfolio reviews, project discussions, networking mixers — all quality-controlled.</p>
+    <div class="feature-card">
+      <div class="feature-icon-large">📲</div>
+      <h3>Instant Connections</h3>
+      <p>Scan someone's QR code at an event. Connected in 5 seconds, automatically tagged to where you met. Add private notes so you remember the conversation. No awkward LinkedIn requests.</p>
+      <div class="feature-benefit">
+        <span class="benefit-label">You get:</span> Never lose track of who you met
       </div>
-      <div class="step">
-        <div class="step-num">02</div>
-        <div class="step-icon">📲</div>
-        <h3>Connect instantly</h3>
-        <p>Scan someone's QR code at the event. Connected in 5 seconds, tagged to the event where you met. No awkward LinkedIn requests.</p>
-      </div>
-      <div class="step">
-        <div class="step-num">03</div>
-        <div class="step-icon">💡</div>
-        <h3>Stay in the loop</h3>
-        <p>See what your event connections are working on. Share opportunities. Ask for advice. The conversation continues long after the event ends.</p>
-      </div>
-      <div class="step">
-        <div class="step-num">04</div>
-        <div class="step-icon">🚀</div>
-        <h3>Grow your career</h3>
-        <p>Real collaborations. Trusted referrals. Quality opportunities. Built from relationships with people you've actually met.</p>
+    </div>
+
+    <div class="feature-card">
+      <div class="feature-icon-large">💡</div>
+      <h3>Stay Connected</h3>
+      <p>See what your event connections are working on. Share opportunities. Ask for advice. The platform gives you natural reasons to stay in touch long after the event ends.</p>
+      <div class="feature-benefit">
+        <span class="benefit-label">You get:</span> Real collaborations, trusted referrals, quality opportunities
       </div>
     </div>
   </div>
 </section>
 
-<!-- FEATURES -->
-<section class="features-section">
-  <p class="section-label">Platform features</p>
-  <h2 class="section-title">Everything you need.<br/><em>Nothing you don't.</em></h2>
+<!-- PRODUCT PREVIEW -->
+<section class="product-section">
+  <div class="product-inner">
+    <p class="section-label" style="color: var(--lavender);">The Experience</p>
+    <h2 class="section-title" style="color: white;">See who's attending.<br/><em>Connect instantly.</em></h2>
+    
+    <div class="product-preview">
+      <div class="preview-phone">
+        <div class="phone-screen-preview">
+          <div class="phone-header-preview">
+            <span style="font-size: 13px; font-weight: 700; color: white;">Makers Klub</span>
+            <span style="font-size: 12px; color: rgba(255,255,255,0.5);">⭐ Member</span>
+          </div>
 
-  <div class="features-grid">
-    <div class="features-list">
-      <div class="feature-item">
-        <div class="feature-icon">🎪</div>
-        <div class="feature-text">
-          <h4>Weekly Curated Events</h4>
-          <p>Portfolio reviews, project discussions, and networking mixers — hosted in Berlin and remotely. Every event is quality-controlled.</p>
+          <div class="event-card-preview">
+            <div style="font-size: 10px; text-transform: uppercase; letter-spacing: 1px; color: var(--lavender); margin-bottom: 8px; font-weight: 700;">🎪 Tonight · Portfolio Review</div>
+            <div style="font-size: 16px; font-weight: 600; color: white; margin-bottom: 8px;">Brand & Identity Night</div>
+            <div style="font-size: 11px; color: rgba(255,255,255,0.4); display: flex; gap: 12px;">
+              <span>📍 Berlin Mitte</span>
+              <span>👥 18 attending</span>
+            </div>
+          </div>
+
+          <div style="font-size: 11px; color: rgba(255,255,255,0.3); margin: 16px 0 8px; text-transform: uppercase; letter-spacing: 1px;">Attending tonight</div>
+
+          <div class="attendee-preview">
+            <div style="width: 32px; height: 32px; border-radius: 50%; background: #7c3aed; display: flex; align-items: center; justify-content: center; color: white; font-weight: 600; font-size: 12px;">S</div>
+            <div style="flex: 1;">
+              <div style="font-size: 12px; font-weight: 600; color: white;">Sarah K.</div>
+              <div style="font-size: 10px; color: rgba(255,255,255,0.4);">Brand Strategist</div>
+            </div>
+            <button style="background: var(--blue); color: white; border: none; padding: 6px 14px; border-radius: 100px; font-size: 10px; font-weight: 600; cursor: pointer;">Connect</button>
+          </div>
+
+          <div class="qr-preview">
+            <div style="font-size: 10px; color: rgba(255,255,255,0.5); margin-bottom: 8px; text-transform: uppercase; letter-spacing: 1px;">Your QR · Scan to connect</div>
+            <div style="width: 60px; height: 60px; background: white; margin: 0 auto; border-radius: 8px; display: grid; grid-template-columns: repeat(5, 1fr); grid-template-rows: repeat(5, 1fr); gap: 2px; padding: 6px;">
+              <div style="background: var(--ink); border-radius: 1px;"></div>
+              <div style="background: var(--ink); border-radius: 1px;"></div>
+              <div style="background: transparent;"></div>
+              <div style="background: var(--ink); border-radius: 1px;"></div>
+              <div style="background: var(--ink); border-radius: 1px;"></div>
+              <div style="background: var(--ink); border-radius: 1px;"></div>
+              <div style="background: transparent;"></div>
+              <div style="background: var(--ink); border-radius: 1px;"></div>
+              <div style="background: transparent;"></div>
+              <div style="background: var(--ink); border-radius: 1px;"></div>
+              <div style="background: transparent;"></div>
+              <div style="background: var(--ink); border-radius: 1px;"></div>
+              <div style="background: var(--ink); border-radius: 1px;"></div>
+              <div style="background: var(--ink); border-radius: 1px;"></div>
+              <div style="background: transparent;"></div>
+              <div style="background: var(--ink); border-radius: 1px;"></div>
+              <div style="background: transparent;"></div>
+              <div style="background: var(--ink); border-radius: 1px;"></div>
+              <div style="background: transparent;"></div>
+              <div style="background: var(--ink); border-radius: 1px;"></div>
+              <div style="background: var(--ink); border-radius: 1px;"></div>
+              <div style="background: var(--ink); border-radius: 1px;"></div>
+              <div style="background: transparent;"></div>
+              <div style="background: var(--ink); border-radius: 1px;"></div>
+              <div style="background: var(--ink); border-radius: 1px;"></div>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="feature-item">
-        <div class="feature-icon">📲</div>
-        <div class="feature-text">
-          <h4>QR Code Connections</h4>
-          <p>Connect with people you meet at events in 5 seconds. Tagged to the event, with context. No searching, no typing.</p>
+
+      <div class="preview-features">
+        <div class="preview-feature-item">
+          <div class="preview-feature-icon">👀</div>
+          <div>
+            <h4>Event Room</h4>
+            <p>See who's attending before you go. Mark who you want to meet. No surprises.</p>
+          </div>
         </div>
-      </div>
-      <div class="feature-item">
-        <div class="feature-icon">🧠</div>
-        <div class="feature-text">
-          <h4>Connection Memory</h4>
-          <p>Add private notes to every connection. Remember who you met, what you talked about, and where your relationship stands.</p>
+
+        <div class="preview-feature-item">
+          <div class="preview-feature-icon">⚡</div>
+          <div>
+            <h4>5-Second Connections</h4>
+            <p>Scan QR code → Connected. Tagged to the event. Add private notes. Done.</p>
+          </div>
         </div>
-      </div>
-      <div class="feature-item">
-        <div class="feature-icon">📣</div>
-        <div class="feature-text">
-          <h4>Opportunities Feed</h4>
-          <p>Share and discover quality projects, collaborations, and referrals — only from people you've actually met and trust.</p>
+
+        <div class="preview-feature-item">
+          <div class="preview-feature-icon">🧠</div>
+          <div>
+            <h4>Connection Memory</h4>
+            <p>Never forget who people are or what you talked about. Context is everything.</p>
+          </div>
         </div>
-      </div>
-      <div class="feature-item">
-        <div class="feature-icon">🏆</div>
-        <div class="feature-text">
-          <h4>Reputation & Levels</h4>
-          <p>Earn XP and unlock VIP status by contributing — hosting events, writing reviews, making introductions that matter.</p>
+
+        <div class="preview-feature-item">
+          <div class="preview-feature-icon">🔥</div>
+          <div>
+            <h4>Activity Feed</h4>
+            <p>See what your connections are working on. Natural conversation starters built in.</p>
+          </div>
         </div>
       </div>
     </div>
+  </div>
+</section>
 
-    <!-- PHONE MOCKUP -->
-    <div class="phone-mockup">
-      <div class="phone-notch"></div>
-      <div class="phone-screen">
-        <div class="phone-header">
-          <span class="phone-logo-text">Makers Klub</span>
-          <span style="font-size: 12px; color: rgba(255,255,255,0.4);">⭐ Member</span>
-        </div>
+<!-- WHY OTHERS FAIL -->
+<section class="section">
+  <p class="section-label">The Problem</p>
+  <h2 class="section-title">Why existing platforms<br/><em>don't work</em></h2>
+  
+  <div class="problem-compact">
+    <div class="problem-item">
+      <span class="problem-icon">🔍</span>
+      <p><strong>Finding the right people feels impossible.</strong> You're surrounded by creatives, but finding senior professionals at your level who understand your challenges is like searching for a needle in a haystack.</p>
+    </div>
 
-        <div class="event-card">
-          <div class="event-tag">🎪 Tonight · Portfolio Review</div>
-          <div class="event-title">Brand & Identity Night</div>
-          <div class="event-meta">
-            <span>📍 Berlin Mitte</span>
-            <span>👥 18 attending</span>
-          </div>
-        </div>
+    <div class="problem-item">
+      <span class="problem-icon">🍂</span>
+      <p><strong>Event connections fade away.</strong> You meet promising people, exchange details, feel the spark... and then nothing. Without a way to stay connected, the momentum dies before it becomes anything real.</p>
+    </div>
 
-        <div style="font-size: 11px; color: rgba(255,255,255,0.3); margin: 14px 0 8px; text-transform: uppercase; letter-spacing: 1px;">Attending tonight</div>
+    <div class="problem-item">
+      <span class="problem-icon">💸</span>
+      <p><strong>Paying for platforms that don't deliver.</strong> You're subscribed to multiple networking platforms hoping one will work. None understand what creative professionals actually need. It's exhausting and expensive.</p>
+    </div>
+  </div>
+</section>
 
-        <div class="attendee-row">
-          <div class="att-avatar" style="background: #7c3aed;">S</div>
-          <div class="att-info">
-            <div class="att-name">Sarah K.</div>
-            <div class="att-role">Brand Strategist</div>
-          </div>
-          <button class="connect-btn">Connect</button>
-        </div>
-        <div class="attendee-row">
-          <div class="att-avatar" style="background: #0891b2;">A</div>
-          <div class="att-info">
-            <div class="att-name">Alex M.</div>
-            <div class="att-role">Creative Director</div>
-          </div>
-          <button class="connect-btn">Connect</button>
-        </div>
-        <div class="attendee-row">
-          <div class="att-avatar" style="background: #b45309;">J</div>
-          <div class="att-info">
-            <div class="att-name">Jana R.</div>
-            <div class="att-role">UX Lead</div>
-          </div>
-          <button class="connect-btn">Connect</button>
-        </div>
+<!-- WHAT YOU GET -->
+<section class="benefits-section">
+  <div class="benefits-inner">
+    <p class="section-label">What You Get</p>
+    <h2 class="section-title">Everything you need.<br/><em>Nothing you don't.</em></h2>
 
-        <div class="qr-section">
-          <div class="qr-label">Your QR · Scan to connect</div>
-          <div class="qr-code">
-            <div class="qr-dot"></div><div class="qr-dot"></div><div class="qr-dot empty"></div><div class="qr-dot"></div><div class="qr-dot"></div>
-            <div class="qr-dot"></div><div class="qr-dot empty"></div><div class="qr-dot"></div><div class="qr-dot empty"></div><div class="qr-dot"></div>
-            <div class="qr-dot empty"></div><div class="qr-dot"></div><div class="qr-dot"></div><div class="qr-dot"></div><div class="qr-dot empty"></div>
-            <div class="qr-dot"></div><div class="qr-dot empty"></div><div class="qr-dot"></div><div class="qr-dot empty"></div><div class="qr-dot"></div>
-            <div class="qr-dot"></div><div class="qr-dot"></div><div class="qr-dot empty"></div><div class="qr-dot"></div><div class="qr-dot"></div>
-          </div>
-        </div>
+    <div class="benefits-grid">
+      <div class="benefit-card">
+        <div class="benefit-icon">🎪</div>
+        <h3>Weekly Curated Events</h3>
+        <p>Portfolio reviews, project discussions, networking mixers. Hosted in Berlin and remotely. Quality-controlled, no randos.</p>
+      </div>
+
+      <div class="benefit-card">
+        <div class="benefit-icon">✅</div>
+        <h3>Verified Creative Network</h3>
+        <p>Only established creative professionals billing €100+/hour. No students, no hobbyists, no recruiters.</p>
+      </div>
+
+      <div class="benefit-card">
+        <div class="benefit-icon">🤝</div>
+        <h3>Real Collaboration Opportunities</h3>
+        <p>Share projects, ask for referrals, find your next collaborator. Built from relationships with people you've actually met.</p>
+      </div>
+
+      <div class="benefit-card">
+        <div class="benefit-icon">🚫</div>
+        <h3>No Spam, No Noise</h3>
+        <p>No job posts from recruiters. No cold pitches. No algorithmic feed nonsense. Just your people and their work.</p>
+      </div>
+
+      <div class="benefit-card">
+        <div class="benefit-icon">🏆</div>
+        <h3>Reputation System</h3>
+        <p>Earn XP by contributing — hosting events, writing reviews, making valuable introductions. Unlock VIP perks.</p>
+      </div>
+
+      <div class="benefit-card">
+        <div class="benefit-icon">💬</div>
+        <h3>Direct Messaging</h3>
+        <p>Free DMs with your connections. Low-friction way to stay in touch and collaborate.</p>
       </div>
     </div>
   </div>
@@ -339,6 +385,16 @@
           <option>Founder</option>
           <option>Other</option>
         </select>
+      </div>
+      <div class="multi-select-wrap">
+        <label class="multi-label">Which MakersKlub feature will you find most useful?</label>
+      
+        <div class="checkbox-group">
+          <label><input type="checkbox" name="hero-features" value="Curated Events"> Free Curated events</label>
+          <label><input type="checkbox" name="hero-features" value="QR Networking"> QR code networking</label>
+          <label><input type="checkbox" name="hero-features" value="Opportunities Feed"> Opportunities feed</label>
+          <label><input type="checkbox" name="hero-features" value="Reputation System"> Reputation & levels</label>
+        </div>
       </div>
       <button type="submit" class="btn-primary">Join the Waitlist — It's Free →</button>
       <p class="cta-privacy">No spam. No credit card. Just your spot in the queue.</p>
