feat: Feature-forward redesign with product previews and preference selection

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="hero-text">
       <div class="hero-badge">
         <span class="hero-badge-dot"></span>
-        Now accepting founding members · Berlin
+        Now accepting founding members
       </div>
 
       <h1>
@@ -42,9 +42,9 @@
         Meet your next collaborator at a curated event. Never lose track of who you met. Build a network that actually moves your career forward.
       </p>
 
-      <button type="submit" class="btn-primary">Join the Waitlist →</button>
+      <a href="#join" class="nav-cta">Join the Waitlist</a>
 
-      <p class="hero-note">Free to join. <span>Berlin launch coming soon.</span></p>
+      <p class="hero-note">Free to join. <span>Launching soon.</span></p>
 
       <div class="social-proof">
         <div class="avatar-stack">
@@ -217,7 +217,7 @@
     <div class="feature-card">
       <div class="feature-icon-large">🎪</div>
       <h3>Curated Events</h3>
-      <p>Weekly portfolio reviews, project discussions, and networking mixers in Berlin. Every event is quality-controlled, focused, and designed for senior creative professionals.</p>
+      <p>Weekly portfolio reviews, project discussions, and networking mixers. Every event is quality-controlled, focused, and designed for senior creative professionals.</p>
       <div class="feature-benefit">
         <span class="benefit-label">You get:</span> Access to the right people at the right events
       </div>
@@ -380,7 +380,7 @@
       <div class="benefit-card">
         <div class="benefit-icon">🎪</div>
         <h3>Weekly Curated Events</h3>
-        <p>Portfolio reviews, project discussions, networking mixers. Hosted in Berlin and remotely. Quality-controlled, no randos.</p>
+        <p>Portfolio reviews, project discussions, networking mixers. Quality-controlled, no randos.</p>
       </div>
 
       <div class="benefit-card">
@@ -447,7 +447,7 @@
 </section>
 
 <!-- FINAL CTA -->
-<section class="cta-section" id="join">
+<section class="cta-section">
   <div class="cta-inner">
     <div class="counter-wrap">
       <div class="counter-badge" id="counter-badge">
@@ -459,9 +459,11 @@
       <p class="progress-label"><span id="spots-left">88 spots remaining</span></p>
     </div>
 
+    <section class="section" id="join">
+
     <h2 class="section-title">Ready to build a network<br/>that <em>actually works?</em></h2>
     <p class="section-body">
-      Join the waitlist. We'll reach out personally when we launch in Berlin. No spam, no newsletters — just a direct invite when we're ready for you.
+      Join the waitlist. We'll reach out personally when we launch. No spam, no newsletters — just a direct invite when we're ready for you.
     </p>
 
     <form class="cta-form" id="waitlist-form" onsubmit="handleWaitlistSubmit(event)">
@@ -538,11 +540,12 @@
       <button type="submit" class="btn-primary">Join the Waitlist — It's Free →</button>
       <p class="cta-privacy">No spam. No credit card. Just your spot in the queue.</p>
     </form>
+  </section>
 
     <div class="success-message" id="success-msg">
       <div class="success-icon">🎉</div>
       <h3>You're on the list!</h3>
-      <p>We'll be in touch personally when Makers Klub launches in Berlin. Keep doing great work.</p>
+      <p>We'll be in touch personally when Makers Klub launches. Keep doing great work.</p>
     </div>
 
     <div class="waitlist-closed" id="waitlist-closed">
